fixed width of search input on mobile

--- a/src/app/components/shared/_dialogs/topic-cloud-administration/topic-cloud-administration.component.scss
+++ b/src/app/components/shared/_dialogs/topic-cloud-administration/topic-cloud-administration.component.scss
@@ -74,6 +74,10 @@ mat-list-item:hover {
   transition: width 300ms linear;
 }
 
+.smallerInput{
+  max-width: 100px;
+}
+
 label {
   color: var(--on-surface)
 }
